Altera a pagina inicial

--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -12,18 +12,17 @@
     width: 100%;
 }
 
-.formulario-aluno{
+.formulario-login{
 
 }
 
-.formulario-professor{
+.formulario-cadastro{
 
 }
 
-.formulario-aluno, .formulario-professor{
+.formulario-login, .formulario-cadastro{
      border: 2px black solid;
      border-radius: 10px;
-     /*margin: 0 10px;*/
  }
 
 .titulo-formulario{
