Conexao com o bd

--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,15 +1,15 @@
 .flex-container {
-         display: flex;
+         /*display: flex;*/
      }
 
 .flex-center {
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*height: 100vh;*/
 }
 
 .container-formularios{
-    width: 100%;
+    /*width: 100%;*/
 }
 
 .formulario-login{
@@ -31,7 +31,6 @@
 }
 
 form{
-    /*border: 2px purple solid;*/
     border-radius: 10px;
     padding: 10px;
     background: lightgray;
