--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -20,7 +20,7 @@
 
 }
 
-.formulario-login, .formulario-cadastro{
+.formulario-login, .formulario-cadastro, .formulario-professor, .formulario-atividade{
      border: 2px black solid;
      border-radius: 10px;
  }
